Bug 499314 - "Show icons in menus" option does not work
Summary: "Show icons in menus" option does not work
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_style (other bugs)
Version First Reported In: 6.2.5
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-01-30 10:40 UTC by cmptait+bugs
Modified: 2025-01-31 18:44 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Settings and config file showing saved options (1.41 MB, image/png)
2025-01-31 08:31 UTC, cmptait+bugs
Details

Note You need to log in before you can comment on or make changes to this bug.
Description cmptait+bugs 2025-01-30 10:40:21 UTC
***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports

Please remove this comment after reading and before submitting - thanks!
***

SUMMARY

Icons still appear in system wide context menus even when disabled using system settings GUI or KDE config files.

STEPS TO REPRODUCE
1. Navigate to 'Global Themes' >> 'Application Style' >> 'Configure Icons and Toolbars'
2. Deselect 'Show icons in menus'
3. Click 'Apply' in 'Application Styles' window (either before or after closing the  'Configure Icons and Toolbars' pop up)

ALTERNATIVE STEPS TO REPRODUCE
1. Open ~/.config/kdeglobals
2. Under the [KDE] section, add or modify the following line: ShowIconsInMenu=false
3. Save the file and restart Plasma or session

OBSERVED RESULT

Chosen setting remains in 'Configure Icons and Toolbars' pop up or ~/.config/kdeglobals, but after a while the context menu icons return (even during the same session).

EXPECTED RESULT

Context menu items should remain disabled until user manually chooses to enable them using GUI or config file

SOFTWARE/OS VERSIONS

Operating System: Arch Linux 
KDE Plasma Version: 6.2.5
KDE Frameworks Version: 6.10.0
Qt Version: 6.8.1
Kernel Version: 6.12.10-zen1-1-zen (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 7800X3D 8-Core Processor
Memory: 31.0 GiB of RAM
Graphics Processor: AMD Radeon RX 7900 XT

ADDITIONAL INFORMATION

As an aside, disabling icons in context menus should apply to all apps (including Dolphin).
Comment 1 Nate Graham 2025-01-30 19:03:25 UTC
I cannot reproduce this issue on current git master; the checkbox in the UI and the value in kdeglobals perfectly mirror one another.
Comment 2 cmptait+bugs 2025-01-31 08:31:26 UTC
Created attachment 177842 [details]
Settings and config file showing saved options

I've uploaded a screenshot showing the saved options (GUI and plain text) and the icons still showing
Comment 3 Nate Graham 2025-01-31 16:56:50 UTC
Ah, so the problem isn't that the config file fails to be updated, but rather that the feature doesn't work. I can confirm that.
Comment 4 Bug Janitor Service 2025-01-31 18:03:28 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-integration/-/merge_requests/162
Comment 5 Kai Uwe Broulik 2025-01-31 18:41:10 UTC
Git commit 4a7bb7528e80980ba76b1fc2e32b06713e4f5509 by Kai Uwe Broulik.
Committed on 31/01/2025 at 18:06.
Pushed by broulik into branch 'master'.

Set QPlatformTheme::ShowIconsInMenus too

In Qt 6, Qt::AA_DontShowIconsInMenus is set by Qt to the value of
this theme hint after our plug-in has been loaded.

In order to support changes at runtime, keep setting the qApp attribute.

M  +1    -0    qt6/src/platformtheme/khintssettings.cpp

https://invent.kde.org/plasma/plasma-integration/-/commit/4a7bb7528e80980ba76b1fc2e32b06713e4f5509
Comment 6 Kai Uwe Broulik 2025-01-31 18:44:23 UTC
Git commit 729169c610cd25d33bf72ad9fa746edf3b321c22 by Kai Uwe Broulik.
Committed on 31/01/2025 at 18:41.
Pushed by broulik into branch 'Plasma/6.3'.

Set QPlatformTheme::ShowIconsInMenus too

In Qt 6, Qt::AA_DontShowIconsInMenus is set by Qt to the value of
this theme hint after our plug-in has been loaded.

In order to support changes at runtime, keep setting the qApp attribute.


(cherry picked from commit 4a7bb7528e80980ba76b1fc2e32b06713e4f5509)

Co-authored-by: Kai Uwe Broulik <kde@privat.broulik.de>

M  +1    -0    qt6/src/platformtheme/khintssettings.cpp

https://invent.kde.org/plasma/plasma-integration/-/commit/729169c610cd25d33bf72ad9fa746edf3b321c22