Set QPlatformTheme::ShowIconsInMenus too

In Qt 6, Qt::AA_DontShowIconsInMenus is set by Qt to the value of
this theme hint after our plug-in has been loaded.

In order to support changes at runtime, keep setting the qApp attribute.

BUG: 499314